# indexmap-amortized

./: .travis.yml  Cargo.toml  README.rst
.github/workflows/: ci.yml
benches/: bench.rs  faststring.rs
src/: lib.rs  macros.rs  map.rs  serde_seq.rs  set.rs
src/map/: core.rs
src/map/core/: raw.rs
src/rayon/: map.rs  set.rs
test-nostd/: Cargo.toml
test-serde/: Cargo.toml
tests/: equivalent_trait.rs  macros_full_path.rs  quick.rs  tests.rs
