[package]
name = "indexmap-amortized"
edition = "2018"
version = "1.0.0"
authors = [
"bluss",
"Josh Stone <cuviper@gmail.com>",
"Jon Gjengset <jon@tsp.io>"
]
documentation = "https://docs.rs/indexmap-amortized/"
repository = "https://github.com/jonhoo/indexmap-amortized"
license = "Apache-2.0/MIT"
description = """
A hash table with consistent order and fast iteration.

The indexmap is a hash table where the iteration order of the key-value
pairs is independent of the hash values of the keys. It has the usual
hash table functionality, it preserves insertion order except after
removals, and it allows lookup of its elements by either hash table key
or numerical index. A corresponding hash set type is also provided.

This crate is an ongoing fork of bluss/indexmap that provides amortized resizes.
"""

keywords = ["hashmap", "no_std"]
categories = ["data-structures", "no-std"]

build = "build.rs"

[lib]
bench = false

[build-dependencies]
autocfg = "1"
[dependencies]
serde = { version = "1.0", optional = true, default-features = false }
rayon_ = { version = "1.0", optional = true, package = "rayon" }
atone = { version = "0.3.1" }

[dependencies.griddle]
version = "0.3.1"
default-features = false
features = ["raw"]

[dev-dependencies]
itertools = "0.9"
rand = {version = "0.7", features = ["small_rng"] }
quickcheck = { version = "0.9", default-features = false }
fnv = "1.0"
lazy_static = "1.3"
fxhash = "0.2.1"

[features]
# Serialization with serde 1.0
serde-1 = ["serde"]
rayon = ["rayon_", "atone/rayon"]

# for testing only, of course
test_low_transition_point = []
test_debug = []

[profile.bench]
debug = true

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[package.metadata.docs.rs]
features = ["serde-1", "rayon"]

[workspace]
members = ["test-nostd", "test-serde"]
